--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "백엔드 로그인화면 만들기기",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www.js",
+    "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
