--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/kimjin9822/node-login#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
